dist/LineScript-win64-20260616/tests/cases/compile_fail/key_bad_types.lsc
main() -> i64 do
  println(key_down("A"))
  return 0
end
